# RcppGP

./: .drone.yml  DESCRIPTION  NAMESPACE  cleanup  configure  configure.ac
R/: AAA.R  RcppExports.R  cov_examples.R  cov_model.R  mkMatUtil.R  spGLM.R  spGLM3.R  spLM.R  spPredict.R  util.R
config/m4/: boost.m4
include/: adapt_mcmc.hpp  assert.hpp  benchmark_cov.hpp  cov_funcs.hpp  cov_funcs_gpu.hpp  cov_model.hpp  cuda_util.hpp  distance.hpp  distributions.hpp  enum_util.hpp  enums.hpp  gpu_mat.hpp  gpu_mat_op.hpp  gpu_util.hpp  init.hpp  lm_prior.hpp  low_rank.hpp  spLM.hpp  spPredict.hpp  test_cov.hpp
inst/examples/: distributions.cpp  model_state_glm.hpp  model_state_lm.hpp  model_state_lm_gpu.hpp  spGLM.cpp  spLM.cpp  spLM_gpu.cpp  spPredict.cpp  spPredict_gpu.cpp  transforms.cpp
inst/examples/R/: spPredict.R
inst/performance/: perf_cov_chol.R  perf_cov_low_rank.R  profile_inv.R  profile_pred.R
inst/tests/: cholesky_util.cpp  settings.R  test-chol-util.R  test-comb-cov-model.R  test-cov-model.R
man/: spBayes2-package.Rd
src/: Makefile  Makefile.in  Makevars  RcppExports.cpp  adapt_mcmc.hpp  benchmark_cov.cpp  calc_cov.cpp  cholesky_util.cpp  cholesky_util.hpp  cov_funcs.cpp  cov_funcs.hpp  cov_funcs_gpu.cu  cov_method.cpp  cov_method.hpp  cov_model.cpp  cov_model.hpp  distance.cpp  distributions.cpp  distributions.hpp  gpu_mat.cpp  gpu_mat_op.cpp  gpu_util.cu  init.cpp  low_rank.cpp  model_state_glm.hpp  model_state_lm.hpp  model_state_mpp_glm.hpp  model_state_pp_glm.hpp  report.hpp  spGLM.cpp  spGLM.hpp  spGLMPredict.cpp  spGLMPredict.hpp  spPPGLM.cpp  spPPGLM.cpp_test  spPPGLM.hpp  spPPLM.cpp  spPPLM.hpp  test_cov.cpp  test_gpu_mat.cpp  (+3 more)
tests/: test-all.R
